syntax = "proto3";
option java_multiple_files = true; // to create multiple java files instead one.
option java_package = "io.amit.library" ;

message LibDto {
  int32 book_id = 1;
  string book_name = 2;
  string book_type = 3;
}

message LibResponse {
  repeated LibDto libs= 1;
}

message LibRequestByBookType {
  string book_type = 1;
}

service LibService {
  rpc getBooksByBookType(LibRequestByBookType) returns(LibResponse);
}